# pomsimulator

./: .readthedocs.yaml  CHANGELOG  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-test-pypi.yml  python-publish.yml  test-pomsimulator.yml  test_simulation.yml
docs/: Makefile  conf.py  examples.rst  index.rst  installation_procedure.rst  intro.rst  manual.md  publications.rst  setup.rst
docs/source/: conf.py  diagrams.rst  guidelines.rst  index.rst  installation_procedure.rst  intro.rst  license.rst  modules.rst  publications.rst  scaling.rst  simulation.rst  system_requirements.rst
inputs/: config_PMo.pomsim  config_W.pomsim
inputs/PMo_Set/: H3O.out  H5O2.out  P00Mo01O04-0H.out  P00Mo01O04-1H.out  P00Mo01O04-2H.out  P00Mo02O07-0H.out  P00Mo02O07-1H.out  P00Mo02O07-2H.out  P00Mo02O08-1H.out  P00Mo02O08-2H.out  P00Mo03O09-0H.out  P00Mo03O09-1H.out  (+38 more)
outputs/: formation_constants_test.txt  reaction_network_test.txt  simulation_parameters_test.txt
pomsimulator/: __main__.py
simulations/: simulation_hpa.py  simulation_hpa_test.py  simulation_ipa.py  simulation_test.py  simulation_tungstates.py
utilities/: SM_clusterization.py  clust_boxplot_filtering.py  cluster_model_selection.py  compute_isomorphism.py  generate_mol_file.py  hpa_phase.py  hpa_speciation.py  ipa_phase.py  ipa_speciation.py  np_IM_test.csv  plot_phase_diagram_hpa.py  plot_phase_diagram_ipa.py  plot_reac_map_hpa.py  plot_reac_map_ipa.py  plot_speciation_diagram.py  scale_constants.py
(+131 files in other folders)
