[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pomsimulator"]
include = ["modules"]

[project]
name = "POMSimulator"
version = "1.0"
dependencies = ["numpy>=1.17.3", "matplotlib>=3.1.2", "networkx>=2.4", "scipy>=1.6.1", "pandas>=1.5",
                        "scikit-learn>=1.3.2", "seaborn"]
requires-python = ">=3.8"
authors = [
    {name = "Enric Petrus", email = "enricpz@icloud.com"},
    {name = "Mireia Segado Centelles"},
    {name = "Jordi Buils"},
    {name = "Diego Garay-Ruiz"},
    {name = "Carles Bo"}
]
maintainers = [
    {name = "Enric Petrus", email = "enricpz@icloud.com"}
]
description = "POMSimulator is a chemistry toolkit for simulating the aqueous speciation and self-assembly mechanisms of metal-oxo clusters"
readme = "README.rst"
license  = {file = "LICENSE"}
keywords = ["chemistry", "aqueous", "speciation", "polyoxometalates", "mechanisms", "reactions", "formation", "constants"]
classifiers = [
    "Programming Language :: Python"
]

[project.urls]
homepage = "https://enricpp.gitlab.io"
repository = "https://github.com/petrusen/pomsimulator"

